--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     build:
       context: .
       dockerfile: ./infra/docker/php/Dockerfile
+    command: ["sleep", "infinity"]
     volumes:
       - type: volume
         source: php-fpm-socket
