--- a/infra/docker/nginx/Dockerfile
+++ b/infra/docker/nginx/Dockerfile
@@ -21,5 +21,6 @@ COPY ./infra/docker/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY ./backend/public /work/backend/public
 
 WORKDIR /work/backend
-RUN chown -R nginx:nginx /work/backend
+RUN chown -R nginx:nginx /work/backend \
+   && chown -R nginx:nginx /var/cache/nginx/.npm
 
