--- a/infra/docker/nginx/Dockerfile
+++ b/infra/docker/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine as node
+FROM node:16-alpine as node
 FROM nginx:1.20-alpine
 LABEL maintainer="ucan-lab <yes@u-can.pro>"
 SHELL ["/bin/ash", "-oeux", "pipefail", "-c"]
@@ -21,8 +21,10 @@ COPY ./infra/docker/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY ./backend/public /work/backend/public
 
 WORKDIR /work/backend
-RUN chown -R nginx:nginx /work/backend
-RUN mkdir -p /var/cache/nginx/.npm \
-  && chown -R nginx:nginx /var/cache/nginx/.npm
 
+RUN addgroup -S www \
+    && adduser -S www -G www \
+    && echo "www ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers \
+    && echo 'www:www' | chpasswd
+    
 
