--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,11 @@ jobs:
         if: ${{ !steps.cache-npm-ci.outputs.cache-hit }}
         
         # npm build
-      - run: docker-compose exec -T web npm run prod
+      - run: |
+          npm config set user 0
+          npm config set unsafe-perm true
+          docker-compose exec -T web npm run prod
+
 
         # ecrログイン
       - uses: aws-actions/amazon-ecr-login@v1
