--- a/infra/docker/nginx/Dockerfile
+++ b/infra/docker/nginx/Dockerfile
@@ -23,4 +23,4 @@ COPY ./backend/public /work/backend/public
 WORKDIR /work/backend
 
 RUN addgroup -g 1000 www && adduser www -G www -D \
-  chown -R www:www /work/backend
+  && chown -R www:www /work/backend
