--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,9 @@ jobs:
       - uses: actions/checkout@v2
         
         # コンテナ起動
-      - run: docker-compose up -d --build app web
+      - run: |
+        docker-compose up -d --build app web
+        docker-compose exec -T web chown -R www:www /work/backend
         
         # キャッシュ設定
       - name: Cache composer
