--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ on:
   push: 
     branches:
       - main
-      - feature/push_images_to_ecr
 env:
   AWS_REGION: ap-northeast-1
   IMAGE_TAG: ${{ github.sha }}
@@ -15,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Configure aws credentials for prod
-        # if: github.ref == "refs/heads/main"
+        if: github.ref == "refs/heads/main"
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.PROD_AWS_ACCESS_KEY_ID }}
@@ -27,7 +26,7 @@ jobs:
           role-duration-seconds: 1800
 
       - name: Set env vars for prod
-        # if: github.ref == "refs/heads/main"
+        if: github.ref == "refs/heads/main"
         run: echo "ENV_NAME=prod" >> $GITHUB_ENV
           
         # コードのチェックアウト(git clone)
@@ -46,8 +45,6 @@ jobs:
           path: backend/vendor
           key: composer-v1-${{ hashFiles('backend/composer.lock') }}
         
-      - run: docker-compose ps 
-      - run: docker-compose exec -T app ls -al 
         # phpパッケージのインストール
       - run: docker-compose exec -T app composer install -n --prefer-dist --no-dev
         if: ${{ !steps.cache-composer.outputs.cache-hit }}
