--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Configure aws credentials for prod
-        if: github.ref=="refs/heads/main"
+        if: github.ref == 'refs/heads/main'
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.PROD_AWS_ACCESS_KEY_ID }}
@@ -26,7 +26,7 @@ jobs:
           role-duration-seconds: 1800
 
       - name: Set env vars for prod
-        if: github.ref=="refs/heads/main"
+        if: github.ref == 'refs/heads/main'
         run: echo "ENV_NAME=prod" >> $GITHUB_ENV
           
         # コードのチェックアウト(git clone)
